--- a/_includes/too_social.html
+++ b/_includes/too_social.html
@@ -1,4 +1,4 @@
 
     {% if site.scholar %}
-    <li><a class="fa fa-2x fa-graduation-cap" href="https://users.ionio.gr/~choko/"><span class="description">Scholar</span></a></li>
+    <li><a class="fa fa-2x fa-graduation-cap" href="{{ site.scholar }}"><span class="description">Scholar</span></a></li>
     {% endif %}
